# daz-plugin-base

./: CMakeLists.txt  README.md
pluginbase/: CMakeLists.txt  DazPluginBase.aps  DazPluginBase.cpp  DazPluginBase.h  DazPluginBase.rc  DazPluginBaseDialog.cpp  DazPluginBaseDialog.h  pluginmain.cpp  resource.h  version.h
pluginbase/Resources/: resources.qrc
